# data-science-challenge-2605

./: .gitignore  DataScience_Task_202605.ipynb  README.md  pyproject.toml  requirements-freeze.txt  requirements.txt
outputs/: DataScience_Task_202605.html
