[project]
name = "data-science-challenge"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.7",
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
]
